@@ -3,8 +3,8 @@
 <webcleaner
  version="0.9"
  port="9090"
- proxyuser="wummel"
- proxypass="da39a3ee5e6b4b0d3255bfef95601890afd80709"
+ proxyuser=""
+ proxypass=""
  parentproxyuser=""
  parentproxypass=""
  parentproxyport="8000"
